2015-02-16  Helmut Eller <eller.helmut@gmail.com>
	    Per Bothner  <per@bothner.com>

	* kawa/reflect.scm: New Scheme library (kawa reflect).
	* kawa/all.scm: New Scheme library.
	* scheme/base-exports, scheme/char-exports, scheme/complex-exports,
	scheme/cxr-exports, scheme/eval-exports, scheme/file-exports,
	scheme/inexact-exports, scheme/lazy-exports,
	scheme/process-context-exports, scheme/time-exports,
	scheme/write-exports: New files containing corresponding exports lists.
	* scheme/*.scm: Use new *-exports files.
	* Makefile.am: Update accordingly.

2015-02-14  Per Bothner  <per@bothner.com>

	* compile_map.scm (listForEachValidateApply): New method, for
	inlining list-based for-each.
	(validate-generic-for-each): Handle if procedure has side-effects.

2015-02-12  Per Bothner  <per@bothner.com>

	* syntax.scm (let-values): Simplification/optimization of common case.

2015-02-11  Per Bothner  <per@bothner.com>

	* syntax.scm (let-values): Use syntax-case instead of syntax-rules.
	This lets us generating "matching" names for the helper variables,
	rather than calling all of them 'x'.

2015-02-09  Per Bothner  <per@bothner.com>

	* prim_syntax.scm (if): Update for mlambda syntax change.

	* characters.scm: Update to use new type specifier syntax.
	* lists.scm: Likewise.
	* misc.scm: Likewise.
	* numbers.scm: Likewise.
	* ports.scm: Likewise.
	* prim_syntax.scm: Likewise.
	* reflection.scm: Likewise.
	* std_syntax.scm: Likewise.
	* strings.scm: Likewise.
	* vectors.scm: Likewise.

2015-01-29  Per Bothner  <per@bothner.com>

	* compile_map.scm (validate-generic-for-each): New procedure.
	(stringForEachValidateApply): Use validate-generic-for-each.
	(vectorForEachValidateApply): New procedure.
	* vectors.scm (vector-for-each): Set validate-apply property.

2015-01-28  Per Bothner  <per@bothner.com>

	* vector.scm (vector-map, vector-map-one, vector-for-each):
	Generalize to java.util.List arguments.

2014-12-28  Per Bothner  <per@bothner.com>
