@@ -1,3 +1,9 @@
+2015-02-17  Per Bothner  <per@bothner.com>
+
+	* kawa/all.scm:  Rename to ...
+	* kawa/base.scm: ... new name.
+	* Makefile.am: Update accordingly.
+
 2015-02-16  Helmut Eller <eller.helmut@gmail.com>
 	    Per Bothner  <per@bothner.com>
 
